syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

enum CardCategory{
  GENERAL_SPENDING = 0;
  AIR_TICKETS      = 1;
  DONATIONS        = 2;
  DINING           = 3;
  EDUCATION        = 4;
  FOOD_DELIVERY    = 5;
  RIDE_HAILING     = 6;
  GROCERIES        = 7;
  HOTELS           = 8;
  HOSPITALS        = 9;
  INSURANCE        = 10;
  SHOPPING         = 11;
  PUBLIC_TRANSPORT = 12;
  TELCO            = 13;
  UTILITIES        = 14;
}

enum CardPaymentType{
  CHIP        = 0;
  STRIPE      = 1;
  CONTACTLESS = 2;
  ONLINE      = 3;
}

enum CardRounding{
  ROUND_DOWN = 0;
  ROUND      = 1;
}

enum CardCapType{
  NO_CAP          = 0;
  CALENDAR_MONTH  = 1;
  STATEMENT_MONTH = 2;
}
message CardRules{
  repeated int64 whitelistCategories = 1;
  repeated int64 blacklistCategories = 2;
  repeated int64 whitelistPaymentTypes = 3;
  repeated int64 blacklistPaymentTypes = 4;
}

message Card{
  int64 cardId = 1;
  string cardName = 2;
  string shortCardName= 3;
  int64 cardType = 4;
  string cardImage = 5;
  string cardIssuer = 6;
  int64 localBaseReward = 7;
  double localBaseMiles = 8;
  CardRules localBaseCardRules = 9;
  int64  localBonusReward = 10;
  double localBonusMiles = 11;
  CardRules localBonusCardRules = 12;
  int64 fcyBaseReward = 13;
  double fcyBaseMiles = 14;
  CardRules fcyBaseCardRules = 15;
  int64 fcyBonusReward = 16;
  double fcyBonusMiles = 17;
  CardRules fcyBonusCardRules = 18;
  repeated int64 fcyBonusPaymentTypes = 19;
  int64 rounding = 20;
  double amountBlock = 21;
  string rewardCurrency = 22;
  int64 capType = 23;
  double cap = 24;
}

message Transaction{
  string description = 1;
  int64 category = 2;
  int64 paymentType = 3;
  int64 amount = 4;
  string currency = 5;
  int64 time = 6;
  int64 cardId = 7;
}

message AddTransactionRequest{

}

message AddTransactionResponse{

}

message AddCardRequest{

}

message AddCardResponse{

}